--- a/browser/components/imagetools/imagetools.html
+++ b/browser/components/imagetools/imagetools.html
@@ -19,10 +19,14 @@
 </head>
 <body>
   <div class="imageTools">
-    <div class="imageToolsImage"></div>
+    <div class="imageToolsImage">
+      <canvas></canvas>
+      <div class="imageToolsTextClusters"></div>
+    </div>
     <div class="imageToolsSidebar">
       <section>
-        <button type="button">Copy All Text</button>
+        <div class="imageToolsName"></div>
+        <button type="button">Copy all text</button>
       </section>
       <section>
         <div class="imageToolsText"></div>
