--- a/browser/components/imagetools/imagetools.html
+++ b/browser/components/imagetools/imagetools.html
@@ -24,13 +24,19 @@
       <div class="imageToolsTextClusters"></div>
     </div>
     <div class="imageToolsSidebar">
-      <section>
-        <div class="imageToolsName"></div>
-        <button type="button">Copy all text</button>
+      <section class="imageToolsName"></section>
+      <hr>
+      <section class="imageToolsTextLoading">
+        Searching for text…
       </section>
-      <section>
-        <div class="imageToolsText"></div>
-      </section>
+      <section class="imageToolsText"></section>
+      <hr>
+      <footer>
+        <section class="imageToolsButtons">
+          <button type="button">Cancel</button>
+          <button type="button" class="primary">Copy all text</button>
+        </section>
+      </footer>
     </div>
   </div>
 </body>
