--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1704,6 +1704,25 @@ toolbar[keyNav=true]:not([collapsed=true], [customizing=true]) toolbartabstop {
   visibility: hidden;
 }
 
+.imageToolsDialogBox {
+  border-radius: 0;
+}
+
+.imageToolsDialogOverlay, .imageToolsDialogBox, .imageToolsDialogBox > browser {
+  display: block;
+  position: absolute;
+  inset: 0;
+}
+
+.imageToolsDialogFrame {
+  width: 100% !important; /* override element style */
+  height: 100% !important; /* override element style */
+}
+
+.imageToolsContentArea {
+  /* filter: saturate(50%) contrast(50%) brightness(150%) blur(5px); */
+}
+
 /**
  * End Dialogs
  */
