Loading animation and button event handlers

--- a/browser/components/imagetools/imagetools.html
+++ b/browser/components/imagetools/imagetools.html
@@ -27,14 +27,15 @@
       <section class="imageToolsName"></section>
       <hr>
       <section class="imageToolsTextLoading">
-        Searching for text…
+        <span class="imageToolsThrobber"></span>
+        <span>Searching image for text…</span>
       </section>
       <section class="imageToolsText"></section>
       <hr>
       <footer>
         <section class="imageToolsButtons">
-          <button type="button">Cancel</button>
-          <button type="button" class="primary">Copy all text</button>
+          <button type="button" id="image-tools-cancel">Cancel</button>
+          <button type="button" id="image-tools-copy" class="primary">Copy all text</button>
         </section>
       </footer>
     </div>
