--- a/browser/components/imagetools/imagetools.css
+++ b/browser/components/imagetools/imagetools.css
@@ -71,6 +71,14 @@
   transition: opacity 200ms;
 }
 
+.imageToolsText p:first-child {
+  margin-top: 0;
+}
+
+.imageToolsText p:last-child {
+  margin-bottom: 0;
+}
+
 .imageToolsTextClusters {
   position: absolute;
   top: 0;
@@ -110,4 +118,37 @@ hr {
 
 .imageToolsButtons > button {
   flex: 1;
+}
+
+.imageToolsTextLoading {
+  display: flex;
+  align-items: center;
+}
+
+.imageToolsThrobber {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  position: relative;
+  overflow: hidden;
+  margin-inline-end: 5.5px;
+}
+
+.imageToolsThrobber::before {
+  content: "";
+  position: absolute;
+  background-image: url("chrome://browser/skin/tabbrowser/loading.svg");
+  background-position: left center;
+  background-repeat: no-repeat;
+  width: 480px;
+  height: 100%;
+  animation: throbber-animation 1.05s steps(30) infinite;
+  -moz-context-properties: fill;
+  fill: currentColor;
+  opacity: 0.7;
+}
+
+@keyframes throbber-animation {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-100%); }
 }
